# face_id-rs

./: .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml  release.yml
assets/: reference_analysis.json
examples/: clustering.rs  draw_face_boxes.rs
src/: analyzer.rs  detector.rs  embedder.rs  face_align.rs  gender_age.rs  helpers.rs  lib.rs  model_manager.rs  session.rs
