[package]
name = "face_id"
version = "0.4.2"
edition = "2024"
rust-version = "1.88"
exclude = ["assets", ".github", "output_previews", "justfile"]
description = "Face detection (bounding boxes, eyes/nose/mouth markers), and facial recognition (embeddings)."
repository = "https://github.com/RuurdBijlsma/face_id-rs"
homepage = "https://github.com/RuurdBijlsma/face_id-rs"
license-file = "LICENSE"
documentation = "https://docs.rs/face_id"

[dependencies]
ort = { version = "=2.0.0-rc.12", default-features = false, features = ["api-24", "ndarray", "std"] }
ndarray = "0.17.2"
nalgebra = { version = "0.34.1", default-features = false, features = ["std"] }
thiserror = "2.0.18"
image = { version = "0.25.9", default-features = false, features = ["rayon"] }
serde = { version = "1.0.228", optional = true, features = ["derive"] }
hf-hub = { version = "0.5.0", default-features = false, features = ["tokio", "rustls-tls"], optional = true }
bon = "3.9.0"
rayon = "1.10"
hdbscan = { version = "0.12.0", optional = true }

[dev-dependencies]
color-eyre = "0.6.5"
serde_json = { version = "1.0.149" }
imageproc = { version = "0.26.1", default-features = false, features = ["text"] }
criterion = { version = "0.8.1", features = ["html_reports"] }
ab_glyph = "0.2.32"
tokio = { version = "1.50", features = ["rt", "macros"] }
walkdir = "2.5.0"

[features]
default = ["download-binaries", "copy-dylibs", "hf-hub", "serde", "clustering"]
serde = ["dep:serde"]
clustering = ["dep:hdbscan", "image/default-formats"]
download-binaries = ["ort/download-binaries", "ort/tls-rustls"]
copy-dylibs = ["ort/copy-dylibs"]
load-dynamic = ["ort/load-dynamic"]
hf-hub = ["dep:hf-hub"] # -> Enable downloading models from HuggingFace, relies on `tokio`
network-tests = ["hf-hub"]
# ort execution providers
cuda = ["ort/cuda"]
tensorrt = ["ort/tensorrt"]
nvrtx = ["ort/nvrtx"]
xnnpack = ["ort/xnnpack"]
webgpu = ["ort/webgpu"]
directml = ["ort/directml"]
coreml = ["ort/coreml"]
migraphx = ["ort/migraphx"]
openvino = ["ort/openvino"]
onednn = ["ort/onednn"]
qnn = ["ort/qnn"]
cann = ["ort/cann"]
nnapi = ["ort/nnapi"]
tvm = ["ort/tvm"]
acl = ["ort/acl"]
armnn = ["ort/armnn"]
vitis = ["ort/vitis"]
rknpu = ["ort/rknpu"]
azure = ["ort/azure"]

[[bench]]
name = "face_id"
harness = false

[[test]]
name = "integration_test"
path = "tests/integration_test.rs"
required-features = ["network-tests"]
